--- a/tools/json.html
+++ b/tools/json.html
@@ -78,10 +78,10 @@
         color: #61e2c4;
       }
       .string {
-        color: #d59188;
+        color: #ebb89a;
       }
       .boolean {
-        color: #258ce0;
+        color: #ec80bb;
       }
       .null {
         color: #636363;
