JSON colour tweak

--- a/tools/json.html
+++ b/tools/json.html
@@ -81,10 +81,10 @@
         color: #ebb89a;
       }
       .boolean {
-        color: #ec80bb;
+        color: #ea9cc6;
       }
       .null {
-        color: #636363;
+        color: #ea9cc6;
       }
       #error {
         color: rgb(232, 55, 15);
